--- a/sh/pg_backup.config
+++ b/sh/pg_backup.config
@@ -4,17 +4,17 @@
 
 # Optional system user to run backups as.  If the user the script is running as doesn't match this
 # the script terminates.  Leave blank to skip check.
-BACKUP_USER=
+BACKUP_USER=gmaurer
 
 # Optional hostname to adhere to pg_hba policies.  Will default to "localhost" if none specified.
 HOSTNAME=
 
 # Optional username to connect to database as.  Will default to "postgres" if none specified.
-USERNAME=
+USERNAME=gmaurer
 
 # This dir will be created if it doesn't exist.  This must be writable by the user the script is
 # running as.
-BACKUP_DIR=/home/backups/database/postgresql/
+BACKUP_DIR=/home/backups/postgresql/
 
 # List of strings to match against in database name, separated by space or comma, for which we only
 # wish to keep a backup of the schema, not the data. Any database names which contain any of these
@@ -40,6 +40,6 @@ DAY_OF_WEEK_TO_KEEP=5
 DAYS_TO_KEEP=7
 
 # How many weeks to keep weekly backups
-WEEKS_TO_KEEP=5
+WEEKS_TO_KEEP=10
 
 ######################################
